--- a/verification-success.html
+++ b/verification-success.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body class="verification-page">
     <div class="verification-container">
@@ -16,11 +17,47 @@
             <i class="fas fa-check-circle"></i>
             <h1>Email Verified Successfully!</h1>
             <p>Your email has been verified and your membership is now active.</p>
-            <a href="dashboard.html" class="btn primary-btn">
+            <a href="dashboard.html" class="btn primary-btn" id="dashboardBtn">
                 <i class="fas fa-home"></i>
                 Go to Dashboard
             </a>
         </div>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', async () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            const verified = urlParams.get('verified');
+            const userId = urlParams.get('id');
+
+            if (verified === 'true' && userId) {
+                // Initialize Supabase
+                const supabaseUrl = 'https://qhkcrrphsjpytdfqfamq.supabase.co';
+                const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFoa2NycnBoc2pweXRkZnFmYW1xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzQzMjQ4NzgsImV4cCI6MjA0OTkwMDg3OH0.S9JT_WmCWYMvSixRq1RrB1UlqXm6fix_riLFYCR3JOI';
+                const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey);
+
+                try {
+                    // Double-check and ensure status is updated
+                    const { error: updateError } = await supabaseClient
+                        .from('profiles')
+                        .update({ 
+                            membership_status: 'active',
+                            verification_token: null
+                        })
+                        .eq('id', userId);
+
+                    if (updateError) {
+                        console.error('Error updating status:', updateError);
+                    }
+
+                    // Update dashboard link to include verification success parameter
+                    const dashboardBtn = document.getElementById('dashboardBtn');
+                    dashboardBtn.href = 'dashboard.html?verified=true';
+                } catch (error) {
+                    console.error('Error:', error);
+                }
+            }
+        });
+    </script>
 </body>
 </html> 
