--- a/dashboard.html
+++ b/dashboard.html
@@ -535,7 +535,7 @@
                         }
 
                         // Get base URL
-                        const baseUrl = window.location.origin;
+                        const baseUrl = 'https://www.blitztclub.com';
                         const verificationUrl = `${baseUrl}/verify-email?token=${verificationToken}`;
 
                         const formData = new FormData();
