--- a/dashboard.html
+++ b/dashboard.html
@@ -516,7 +516,9 @@
                     try {
                         // Generate verification token
                         function generateToken() {
-                            return Math.random().toString(36).substring(2) + Date.now().toString(36);
+                            const randomPart = Math.random().toString(36).substring(2);
+                            const timestamp = Date.now().toString(36);
+                            return `${randomPart}${timestamp}`.trim();
                         }
                         
                         const verificationToken = generateToken();
@@ -526,7 +528,10 @@
                         // Update verification token in profile
                         const { error: updateError } = await supabaseClient
                             .from('profiles')
-                            .update({ verification_token: verificationToken })
+                            .update({ 
+                                verification_token: verificationToken,
+                                membership_status: 'pending'
+                            })
                             .eq('id', profile.id);
                         
                         if (updateError) {
