--- a/register.html
+++ b/register.html
@@ -313,11 +313,10 @@
                 }
 
                 try {
-                    // Register through our server endpoint
                     const response = await fetch('/api/register', {
                         method: 'POST',
                         headers: {
-                            'Content-Type': 'application/json',
+                            'Content-Type': 'application/json'
                         },
                         body: JSON.stringify({
                             email,
@@ -328,14 +327,17 @@
                     });
 
                     const data = await response.json();
-                    if (!response.ok) throw new Error(data.error);
+                    if (!response.ok) {
+                        console.error('Registration failed:', data);
+                        throw new Error(data.error || 'Registration failed');
+                    }
 
                     alert('Registration successful! Please check your email to verify your account.');
                     window.location.href = 'login.html';
 
                 } catch (error) {
                     console.error('Registration error:', error);
-                    alert(error.message);
+                    alert('Registration failed: ' + error.message);
                 }
             });
 
