--- a/register.html
+++ b/register.html
@@ -313,7 +313,7 @@
                 }
 
                 try {
-                    const response = await fetch('/api/register', {
+                    const response = await fetch('https://www.blitztclub.com/api/register', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json'
