--- a/register.html
+++ b/register.html
@@ -313,24 +313,57 @@
                 }
 
                 try {
-                    const response = await fetch('https://www.blitztclub.com/api/register', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json'
-                        },
-                        body: JSON.stringify({
-                            email,
-                            password,
-                            fullName,
-                            username
-                        })
+                    // Create auth user with Supabase
+                    const { data: authData, error: authError } = await supabaseClient.auth.signUp({
+                        email,
+                        password,
+                        options: {
+                            data: {
+                                full_name: fullName,
+                                username: username
+                            }
+                        }
                     });
 
-                    const data = await response.json();
-                    if (!response.ok) {
-                        console.error('Registration failed:', data);
-                        throw new Error(data.error || 'Registration failed');
-                    }
+                    if (authError) throw authError;
+
+                    // Generate member ID
+                    const memberId = 'BTC' + Date.now().toString().slice(-6);
+
+                    // Create profile
+                    const { error: profileError } = await supabaseClient
+                        .from('profiles')
+                        .insert([{
+                            id: authData.user.id,
+                            full_name: fullName,
+                            username: username,
+                            email: email,
+                            member_id: memberId,
+                            membership_status: 'pending',
+                            membership_type: 'standard'
+                        }]);
+
+                    if (profileError) throw profileError;
+
+                    // Send verification email using FormSubmit
+                    const formData = new FormData();
+                    formData.append('email', email);
+                    formData.append('_captcha', 'false');
+                    formData.append('_template', 'box');
+                    formData.append('_subject', 'Welcome to Blitz Tesla Club');
+                    formData.append('message', `Welcome to Blitz Tesla Club!
+
+Your Member ID: ${memberId}
+
+Please check your email for a verification link from Supabase to activate your account.
+
+Best regards,
+Blitz Tesla Club Team`);
+
+                    await fetch(`https://formsubmit.co/ajax/${email}`, {
+                        method: 'POST',
+                        body: formData
+                    });
 
                     alert('Registration successful! Please check your email to verify your account.');
                     window.location.href = 'login.html';
