--- a/register.html
+++ b/register.html
@@ -289,51 +289,34 @@
             registerForm.addEventListener('submit', async (e) => {
                 e.preventDefault();
                 
-                const fullName = document.getElementById('fullName').value.trim();
-                const email = document.getElementById('email').value.trim();
-                const password = passwordInput.value;
-                const confirmPassword = document.getElementById('confirmPassword').value;
-                const terms = document.getElementById('terms').checked;
-                const username = document.getElementById('username').value.trim();
-
-                // Validation
-                if (!fullName || !email || !password || !confirmPassword) {
-                    alert('Please fill in all fields');
-                    return;
-                }
-
-                if (password !== confirmPassword) {
-                    alert('Passwords do not match');
-                    return;
-                }
-
-                if (!terms) {
-                    alert('Please accept the Terms of Service and Privacy Policy');
-                    return;
-                }
-
                 try {
                     // Create auth user with Supabase
                     const { data: authData, error: authError } = await supabaseClient.auth.signUp({
                         email,
                         password,
                         options: {
-                            data: {
-                                full_name: fullName,
-                                username: username
-                            }
+                            emailRedirectTo: 'https://www.blitztclub.com/verify-email'
                         }
                     });
 
-                    if (authError) throw authError;
+                    if (authError) {
+                        console.error('Auth error:', authError);
+                        throw new Error(authError.message);
+                    }
+
+                    if (!authData?.user?.id) {
+                        throw new Error('No user ID returned from signup');
+                    }
 
                     // Generate member ID
                     const memberId = 'BTC' + Date.now().toString().slice(-6);
 
                     // Create profile
+                    await new Promise(resolve => setTimeout(resolve, 1000)); // Wait for auth to complete
+
                     const { error: profileError } = await supabaseClient
                         .from('profiles')
-                        .insert([{
+                        .upsert([{
                             id: authData.user.id,
                             full_name: fullName,
                             username: username,
@@ -341,11 +324,17 @@
                             member_id: memberId,
                             membership_status: 'pending',
                             membership_type: 'standard'
-                        }]);
+                        }], {
+                            onConflict: 'id',
+                            returning: 'minimal'
+                        });
 
-                    if (profileError) throw profileError;
+                    if (profileError) {
+                        console.error('Profile error:', profileError);
+                        throw new Error('Error creating user profile');
+                    }
 
-                    // Send verification email using FormSubmit
+                    // Send welcome email
                     const formData = new FormData();
                     formData.append('email', email);
                     formData.append('_captcha', 'false');
@@ -355,7 +344,8 @@
 
 Your Member ID: ${memberId}
 
-Please check your email for a verification link from Supabase to activate your account.
+Please check your email for a verification link to activate your account.
+Once verified, you can log in and access your membership benefits.
 
 Best regards,
 Blitz Tesla Club Team`);
@@ -370,7 +360,7 @@ Blitz Tesla Club Team`);
 
                 } catch (error) {
                     console.error('Registration error:', error);
-                    alert('Registration failed: ' + error.message);
+                    alert(error.message || 'Registration failed. Please try again.');
                 }
             });
 
