--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="executive.html">Executives</a></li>
             <li><a href="news.html">News</a></li>
-            <li><a href="#join">Join Us</a></li>
+            <li><a href="register.html">Join Us</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
@@ -243,7 +243,7 @@
                 </div>
                 <p class="hero-tagline">Experience the Future of Driving</p>
                 <div class="cta-buttons">
-                    <a href="login.html" class="btn">Join Now</a>
+                    <a href="register.html" class="btn">Join Now</a>
                     <a href="events.html" class="btn btn-outline">Upcoming Events</a>
                 </div>
             </div>
