--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <li><a href="executive.html">Executives</a></li>
             <li><a href="news.html">News</a></li>
             <li><a href="register.html">Join Us</a></li>
-            <li><a href="login.html">Login</a></li>
+            <li><a href="/login">Login</a></li>
         </ul>
     </nav>
 
