--- a/register.html
+++ b/register.html
@@ -222,14 +222,14 @@
     </footer>
 
     <script>
-        // Initialize Supabase client correctly
+        // Initialize Supabase client
         const supabaseUrl = 'https://qhkcrrphsjpytdfqfamq.supabase.co';
         const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFoa2NycnBoc2pweXRkZnFmYW1xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzQzMjQ4NzgsImV4cCI6MjA0OTkwMDg3OH0.S9JT_WmCWYMvSixRq1RrB1UlqXm6fix_riLFYCR3JOI';
         const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey, {
             auth: {
                 autoRefreshToken: true,
                 persistSession: true,
-                detectSessionInUrl: true
+                detectSessionInUrl: false
             }
         });
 
@@ -295,13 +295,46 @@
             registerForm.addEventListener('submit', async (e) => {
                 e.preventDefault();
                 
+                // Get form values
+                const fullName = document.getElementById('fullName').value.trim();
+                const email = document.getElementById('email').value.trim();
+                const password = passwordInput.value;
+                const confirmPassword = document.getElementById('confirmPassword').value;
+                const terms = document.getElementById('terms').checked;
+                const username = document.getElementById('username').value.trim();
+
+                // Validation
+                if (!fullName || !email || !password || !confirmPassword) {
+                    alert('Please fill in all fields');
+                    return;
+                }
+
+                if (password !== confirmPassword) {
+                    alert('Passwords do not match');
+                    return;
+                }
+
+                if (!terms) {
+                    alert('Please accept the Terms of Service and Privacy Policy');
+                    return;
+                }
+
                 try {
                     // Create auth user with Supabase
+                    // Determine if we're in local development or production
+                    const isLocalhost = window.location.hostname === 'localhost' || 
+                                      window.location.hostname === '127.0.0.1';
+                    
+                    const redirectUrl = isLocalhost 
+                        ? 'http://localhost:3000/verify-email.html'
+                        : 'https://blitztclub.com/verify-email.html';
+
                     const { data: authData, error: authError } = await supabaseClient.auth.signUp({
                         email,
                         password,
                         options: {
-                            emailRedirectTo: window.location.origin + '/verify-email'
+                            emailRedirectTo: redirectUrl,
+                            redirectTo: redirectUrl
                         }
                     });
 
@@ -314,12 +347,10 @@
                         throw new Error('No user ID returned from signup');
                     }
 
-                    console.log('Auth successful:', authData);
-
                     // Generate member ID
                     const memberId = 'BTC' + Date.now().toString().slice(-6);
 
-                    // Create profile
+                    // Create profile in Supabase
                     const { error: profileError } = await supabaseClient
                         .from('profiles')
                         .insert([{
@@ -330,21 +361,12 @@
                             member_id: memberId,
                             membership_status: 'pending',
                             membership_type: 'standard'
-                        }])
-                        .select();
+                        }]);
 
                     if (profileError) {
                         console.error('Profile error:', profileError);
-                        // Try to clean up the auth user if profile creation fails
-                        try {
-                            await supabaseClient.auth.signOut();
-                        } catch (e) {
-                            console.error('Cleanup error:', e);
-                        }
                         throw new Error('Error creating user profile');
                     }
-
-                    console.log('Profile created successfully');
 
                     // Send welcome email
                     const formData = new FormData();
