--- a/register.html
+++ b/register.html
@@ -329,7 +329,7 @@
                     // Generate member ID first
                     const apiUrl = window.location.hostname === 'localhost' 
                         ? 'http://localhost:3000/api/generate-member-id'
-                        : 'https://www.blitztclub.com/api/generate-member-id';
+                        : '/api/generate-member-id';
                     
                     console.log('Making request to:', apiUrl);
                     const response = await fetch(apiUrl, {
@@ -339,7 +339,6 @@
                             'Accept': 'application/json'
                         },
                         body: JSON.stringify({ membership_type: 'standard' }),
-                        credentials: 'same-origin',
                         mode: 'cors'
                     });
 
@@ -347,6 +346,7 @@
                     console.log('Server response:', responseData);
 
                     if (!response.ok) {
+                        console.error('Server error:', responseData);
                         throw new Error(
                             responseData.error?.message || 
                             responseData.error || 
