--- a/register.html
+++ b/register.html
@@ -348,10 +348,9 @@
                     if (!response.ok) {
                         console.error('Server error:', responseData);
                         throw new Error(
-                            responseData.error?.message || 
-                            responseData.error || 
-                            responseData.message || 
-                            'Failed to generate member ID'
+                            typeof responseData.error === 'object' 
+                                ? responseData.error.message 
+                                : responseData.error || 'A server error has occurred'
                         );
                     }
 
